color picker error fixed

--- a/style.css
+++ b/style.css
@@ -27,8 +27,18 @@
 position: absolute;
 z-index: 100;
 }
+
+
+
+/*
+.dark { color: rgba(85, 82, 89, 1); }
+.white { color: rgba(234, 238, 242, 1); }
+.yellow { color: rgba(242, 214, 162, 1); }
+.tan { color: rgba(242, 225, 205, 1); }
+.pink { color: rgba(191, 156, 149, 1); }
+*/
 /* progress {
- 
+
   background-color: orangered;
 }
 progress::-webkit-progress-bar {
