errors shown on page

--- a/style.css
+++ b/style.css
@@ -47,8 +47,7 @@ z-index: 100;
     margin: 30% 0;
  }
 
-
- .display-4Def { /*changed until bottom*/
+ .display-4Def {
   font-size: 112px;
   font-weight: 100;
  }
