--- a/style.css
+++ b/style.css
@@ -44,7 +44,10 @@ z-index: 100;
     margin: 0px auto;
  }
  .homeMargin {
-    margin: 30% 0;
+    margin: 15% 0;
+ }
+ .load {
+  margin: 18% 0 48% 0;
  }
 
  .display-4Def {
