--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
   margin: 10px;
   padding: 5px;
   margin-top: 0px;
-  background-color: gray
+  background-color: gray;
 }
 .information{
   padding-top: 5px;
@@ -42,12 +42,27 @@ z-index: 100;
     height: 1414.7px;
     width: 1093.3px;
     margin: 0px auto;
+    overflow: hidden;
  }
+ #smallPage {
+    height: 424.4px;
+    width: 328px;
+    overflow: hidden;
+ }
+ #smallPage .subheadingDef {
+    font-size: 16px;
+    margin: 3px;
+    padding: 10px 4px;
+   }
  .homeMargin {
     margin: 15% 0;
  }
  .load {
   margin: 18% 0 48% 0;
+ }
+
+ .maliaTempBar {
+  height: 266.7px;
  }
 
  .display-4Def {
@@ -83,29 +98,146 @@ z-index: 100;
   font-weight: 500;
  }
   .body-1Def {
-  font-size: 24px;
+  font-size: 14px;
   font-weight: 400;
  }
   .captionDef {
-  font-size: 24px;
+  font-size: 12px;
   font-weight: 400;
  }
+
+
+
+ #page .display-4Def {
+  font-size: 149.3px;
+  font-weight: 100;
+ }
+  #page .display-3Def {
+  font-size: 74.7px;
+  font-weight: 400;
+ }
+  #page .display-2Def {
+  font-size: 60px;
+  font-weight: 400;
+ }
+  #page .display-1Def {
+  font-size: 45.3px;
+  font-weight: 400;
+ }
+  #page .headlineDef {
+  font-size: 32px;
+  font-weight: 400;
+ }
+   #page .titleDef {
+  font-size: 26.7px;
+  font-weight: 500;
+ }
+   #page .subheadingDef {
+  font-size: 21.3px;
+  font-weight: 400;
+ }
+   #page .body-2Def {
+  font-size: 18.7px;
+  font-weight: 500;
+ }
+   #page .body-1Def {
+  font-size: 18.7px;
+  font-weight: 400;
+ }
+   #page .captionDef {
+  font-size: 16px;
+  font-weight: 400;
+ }
+
+ @media only screen and (max-width: 1903px) {
+  #smallPage {
+    height: 212.2px;
+    width: 164px;
+    overflow: hidden;
+   }
+   #smallPage .subheadingDef {
+    font-size: 10px;
+    margin: 3px;
+    padding: 2px;
+   }
+}
 
  @media only screen and (max-width: 1247px) {
   #page {
     height: 1061px;
     width: 820px;
+    margin: 0px auto;
   }
+  .maliaTempBar {
+    height: 200px;
+ }
 }
+@media only screen and (max-width: 1260px) {
+  #smallPage {
+    height: 424.4px;
+    width: 328px;
+    overflow: hidden;
+   }
+   #smallPage .subheadingDef {
+    font-size: 16px;
+    margin: 3px;
+    padding: 10px 4px;
+   }
+}
+
  @media only screen and (max-width: 850px) {
   #page {
     height: 530.5px;
     width: 410px;
+    margin: 0px auto;
   }
   #hero {
     height: 100%;
     margin: 30% 0;
   }
+  .maliaTempBar {
+  height: 100px;
+ }
+ #page .display-4Def {
+  font-size: 56px;
+  font-weight: 100;
+ }
+  #page .display-3Def {
+  font-size: 28px;
+  font-weight: 400;
+ }
+  #page .display-2Def {
+  font-size: 22.5px;
+  font-weight: 400;
+ }
+  #page .display-1Def {
+  font-size: 17px;
+  font-weight: 400;
+ }
+  #page .headlineDef {
+  font-size: 12px;
+  font-weight: 400;
+ }
+   #page .titleDef {
+  font-size: 10px;
+  font-weight: 500;
+ }
+   #page .subheadingDef {
+  font-size: 8px;
+  font-weight: 400;
+ }
+   #page .body-2Def {
+  font-size: 7px;
+  font-weight: 500;
+ }
+   #page .body-1Def {
+  font-size: 7px;
+  font-weight: 400;
+ }
+   #page .captionDef {
+  font-size: 6px;
+  font-weight: 400;
+ }
 }
 
  /*
