--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ z-index: 100;
   #page {
     height: 530.5px;
     width: 410px;
-    margin: 0px auto;
+    margin: 0px auto 30% auto;
   }
   #hero {
     height: 100%;
@@ -224,6 +224,61 @@ z-index: 100;
  }
    #page .subheadingDef {
   font-size: 8px;
+  font-weight: 400;
+ }
+   #page .body-2Def {
+  font-size: 7px;
+  font-weight: 500;
+ }
+   #page .body-1Def {
+  font-size: 7px;
+  font-weight: 400;
+ }
+   #page .captionDef {
+  font-size: 6px;
+  font-weight: 400;
+ }
+}
+
+@media only screen and (max-width: 600px) {
+  #page {
+    height: 318.3px;
+    width: 246px;
+    margin: 0px auto 30% auto;
+  }
+  #hero {
+    height: 100%;
+    margin: 30% 0;
+  }
+  .maliaTempBar {
+  height: 60px;
+ }
+ #page .display-4Def {
+  font-size: 33.6px;
+  font-weight: 100;
+ }
+  #page .display-3Def {
+  font-size: 16.8px;
+  font-weight: 400;
+ }
+  #page .display-2Def {
+  font-size: 13.5px;
+  font-weight: 400;
+ }
+  #page .display-1Def {
+  font-size: 10.2px;
+  font-weight: 400;
+ }
+  #page .headlineDef {
+  font-size: 7.2px;
+  font-weight: 400;
+ }
+   #page .titleDef {
+  font-size: 10px;
+  font-weight: 500;
+ }
+   #page .subheadingDef {
+  font-size: 4.8px;
   font-weight: 400;
  }
    #page .body-2Def {
