changing fonts wip

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ z-index: 100;
     width: 1093.3px;
     margin: 0px auto;
     overflow: hidden;
+    font-family: 'Nunito Sans', 'Roboto', sans-serif;
  }
  #smallPage {
     height: 424.4px;
@@ -364,3 +365,18 @@ z-index: 100;
 progress::-webkit-progress-bar {
   color: crimson;
 } */
+
+/*
+
+
+font-family: 'Merriweather', serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Libre Baskerville', serif;
+font-family: 'Karla', sans-serif;
+font-family: 'Arvo', serif;
+font-family: 'Source Serif Pro', serif;
+font-family: 'EB Garamond', serif;
+font-family: 'Cairo', sans-serif;
+
+
+ */
