--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ z-index: 100;
     width: 1093.3px;
     margin: 0px auto;
     overflow: hidden;
+   font-family: 'Nunito Sans', 'Roboto', sans-serif;
  }
  #smallPage {
     height: 424.4px;
@@ -152,6 +153,10 @@ z-index: 100;
   font-size: 16px;
   font-weight: 400;
  }
+ #smallpage .body-2Def { 
+  font-size: 7px;
+  font-weight: 500;
+ } /*changed */
 
  @media only screen and (max-width: 1903px) {
   #smallPage {
@@ -164,6 +169,10 @@ z-index: 100;
     margin: 3px;
     padding: 2px;
    }
+   #smallpage .body-2Def { 
+    font-size: 7px;
+    font-weight: 500;
+   } /*changed */
 }
 
  @media only screen and (max-width: 1247px) {
@@ -239,6 +248,11 @@ z-index: 100;
     margin: 3px;
     padding: 10px 4px;
    }
+
+ #smallpage .body-2Def { 
+  font-size: 7px;
+  font-weight: 500;
+ } /*changed */
 }
 
  @media only screen and (max-width: 850px) {
@@ -366,8 +380,6 @@ progress::-webkit-progress-bar {
 } */
 
 /*
-
-
 font-family: 'Merriweather', serif;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Libre Baskerville', serif;
@@ -376,6 +388,4 @@ font-family: 'Arvo', serif;
 font-family: 'Source Serif Pro', serif;
 font-family: 'EB Garamond', serif;
 font-family: 'Cairo', sans-serif;
-
-
  */
